# cuda-grind

./: .gitignore  Dockerfile  README.md  add.cpp  add_cuda.cu  vector_add.py  vector_sum.cu
CuTe/: 01_layout.md  02_layout_algebra.md  03_tensors.md  04_algorithms.md
gpu-mode/lecture_1/: .lec.md.swp  lec.md
leiMao/: CMakeLists.txt  notes.md
leiMao/include/: cuda_gemm.hpp  cuda_gemm_utils.cuh  profile_utils.cuh
leiMao/src/: 00_non_coalesced_global_memory_access.cu  01_coalesced_global_memory_access.cu  02_2d_block_tiling.cu  02_2d_block_tiling_own.cu  03_2d_block_tiling_1d_thread_tiling.cu  04_2d_block_tiling_2d_thread_tiling.cu  05_2d_block_tiling_2d_thread_tiling_matrix_transpose_vectorized_memory_access.cu  06_2d_block_tiling_2d_warp_tiling_2d_thread_tiling_matrix_transpose.cu  07_2d_block_tiling_2d_warp_tiling_2d_thread_tiling_matrix_transpose_wmma.cu  CMakeLists.txt  notes.md  profile_cuda_gemm_fp16.cu  profile_cuda_gemm_fp32.cu
own_implementation/: 2d_block_tiling.cu  2d_block_tiling_1d_thread_tiling.cu  2d_block_tiling_2d_thread_tiling.cu  2d_block_tiling_2d_thread_tiling_matrix_transpose_vectorized_mem_access.cu  2d_block_tiling_2d_warp_tiling_2d_thread_tiling_matrix_transpose_vectorized_memory_access.cu  CMakeLists.txt  coalesced_memory_access.cu  non_coalesced_memory.cu  notes.md  profile_cuda_gemm_fp16.cu  profile_cuda_gemm_fp32.cu
own_implementation/include/: cuda_gemm.hpp  cuda_gemm_utils.hpp
own_implementation/leiMao_implementation/: CMakeLists.txt
own_implementation/leiMao_implementation/src/: CMakeLists.txt  profile_cuda_gemm_fp16.cu  profile_cuda_gemm_fp32.cu
pmpp/: matrix_multiplication.cu  parallel_vec_add  parallel_vec_add.cu  profiling.py  tiled_matrix_multiplication.cu
pmpp/exercises/chapter-3/: matrix_addition.cu  matrix_addition_column.cu  matrix_addition_row.cu  matrix_vector_multiplication.cu  readme.md
pmpp/exercises/chapter-4/: readme.md
pmpp/exercises/chapter-5/: readme.md
some_things/: add  add.cpp  add_cuda  vector_add.py  vector_sum
vector_add/: vector-addition-performance.csv
week-1/: README.md  theory.md  vector_add.py  vector_mul_with_mixed_strides.py  vector_multiply.py  vector_relu.py
week-2/: README.md  matmul.py  theory.md
